Fixed nav bar spacing and alginment

--- a/src/main/resources/static/css/global.css
+++ b/src/main/resources/static/css/global.css
@@ -18,6 +18,7 @@ body {
     display: flex;
 }
 
+
 .navbar-custom {
     padding: 0!important;
     --bs-body-line-height: 3 !important;
@@ -58,20 +59,22 @@ body {
     padding: 5px 0;
 }
 
-.topnav-right {
-    text-align: center;
-    display: inline;
-    text-transform: uppercase;
-    font-size: 16px !important;
-    text-decoration: none;
-    color: white;
-    font-family: Arial, serif !important;
-    transition: 0.3s ease;
-    border-top: 4px solid transparent;
-    border-bottom: 4px solid transparent;
-    margin: 0 10px;
-    padding: 5px 0;
-}
+/*.topnav-right {*/
+/*    display: flex;*/
+/*    float: right;*/
+/*    text-align: center;*/
+/*    !*display: inline;*!*/
+/*    text-transform: uppercase;*/
+/*    font-size: 16px !important;*/
+/*    text-decoration: none;*/
+/*    color: white;*/
+/*    font-family: Arial, serif !important;*/
+/*    transition: 0.3s ease;*/
+/*    border-top: 4px solid transparent;*/
+/*    border-bottom: 4px solid transparent;*/
+/*    margin: 0 10px;*/
+/*    padding: 5px 0;*/
+/*}*/
 
 .navbar-nav .nav-link.active,
 .navbar-nav .nav-link:hover {
@@ -83,8 +86,6 @@ body {
     text-shadow: 6px 6px 0px rgba(255, 255, 255, 0.2);
 }
 
-
-
 .nav-item{
     margin: auto;
 }
@@ -94,13 +95,17 @@ body {
     width: 65px;
 }
 
-/*-------------------------Social Media Link positioning -------------------*/
-.social-media {
-    font-size: 18px;
-    display: flex;
-    flex-direction: row;
-    text-align: center;
+.container-fluid {
+    padding-left: 0!important;
 }
+
+/*!*-------------------------Social Media Link positioning -------------------*!*/
+/*.social-media {*/
+/*    font-size: 18px;*/
+/*    display: flex;*/
+/*    flex-direction: row;*/
+/*    text-align: center;*/
+/*}*/
 
 /*------------------------Containers for forms and profile------------------*/
 .container {
@@ -725,7 +730,8 @@ margin-left: 25px;
 }
 
 /*----------------created break point to move to a hamburger button and resize photo-----------*/
-@media only screen and (max-width: 480px) {
+@media only screen and (max-width: 600px) {
+
     body {
         background-position: center center;
         background-attachment: fixed;
